syntax = "proto3";

option go_package = "github.com/fsufitch/tagioalisi-bot/proto";
package tagioalisi;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
